; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_log.c_log_IsKept.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_log.c_log_IsKept.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LogLOG = common dso_local global i32 0, align 4
@LOG_KEPT_SYSLOG = common dso_local global i32 0, align 4
@LogMIN = common dso_local global i32 0, align 4
@LogMAX = common dso_local global i32 0, align 4
@LogMAXCONF = common dso_local global i32 0, align 4
@LOG_KEPT_LOCAL = common dso_local global i32 0, align 4
@LogMaskLocal = common dso_local global i32 0, align 4
@LogMask = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @log_IsKept(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @LogLOG, align 4
  %6 = icmp eq i32 %4, %5
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i32, i32* @LOG_KEPT_SYSLOG, align 4
  store i32 %8, i32* %2, align 4
  br label %48

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @LogMIN, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %17, label %13

13:                                               ; preds = %9
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @LogMAX, align 4
  %16 = icmp sgt i32 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %13, %9
  store i32 0, i32* %2, align 4
  br label %48

18:                                               ; preds = %13
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* @LogMAXCONF, align 4
  %21 = icmp sgt i32 %19, %20
  br i1 %21, label %22, label %26

22:                                               ; preds = %18
  %23 = load i32, i32* @LOG_KEPT_LOCAL, align 4
  %24 = load i32, i32* @LOG_KEPT_SYSLOG, align 4
  %25 = or i32 %23, %24
  store i32 %25, i32* %2, align 4
  br label %48

26:                                               ; preds = %18
  %27 = load i32, i32* @LogMaskLocal, align 4
  %28 = load i32, i32* %3, align 4
  %29 = call i32 @MSK(i32 %28)
  %30 = and i32 %27, %29
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %26
  %33 = load i32, i32* @LOG_KEPT_LOCAL, align 4
  br label %35

34:                                               ; preds = %26
  br label %35

35:                                               ; preds = %34, %32
  %36 = phi i32 [ %33, %32 ], [ 0, %34 ]
  %37 = load i32, i32* @LogMask, align 4
  %38 = load i32, i32* %3, align 4
  %39 = call i32 @MSK(i32 %38)
  %40 = and i32 %37, %39
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %42, label %44

42:                                               ; preds = %35
  %43 = load i32, i32* @LOG_KEPT_SYSLOG, align 4
  br label %45

44:                                               ; preds = %35
  br label %45

45:                                               ; preds = %44, %42
  %46 = phi i32 [ %43, %42 ], [ 0, %44 ]
  %47 = or i32 %36, %46
  store i32 %47, i32* %2, align 4
  br label %48

48:                                               ; preds = %45, %22, %17, %7
  %49 = load i32, i32* %2, align 4
  ret i32 %49
}

declare dso_local i32 @MSK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
